tests/SemanticError/Variables/Test6/TwoTimesDefinition.c

int main() {
	int a= 42;
	int a = 1;
	return a;
}
